--- a/case01/index.html
+++ b/case01/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+    <h1>JS Que</h1>
+
     <section>
             <div>
                 <img src="https://media.giphy.com/media/3oEjHW5ZfmQsI2rUuk/giphy.gif" alt="" width="100">
@@ -27,10 +29,16 @@
 
                 <img src="https://media.giphy.com/media/l0IylQoMkcbZUbtKw/giphy.gif" alt="" width="300">
             </div>
-
-        <hr>
     </section>
+        <hr>
 
+        <div>
+            <button type="button" id="start">Start</button>
+            <button type="button" id="stop">Stop</button>
+        </div>
+
+    <script src="assets/js/lib/jquery.min.js"></script>
     <script src="assets/js/style.js"></script>
+
 </body>
 </html>
