complete the assignment 08

--- a/case01/index.html
+++ b/case01/index.html
@@ -32,7 +32,7 @@
     </section>
         <hr>
 
-        <div>
+        <div id="btns">
             <button type="button" id="start">Start</button>
             <button type="button" id="stop">Stop</button>
         </div>
